Feature:  json upload and export -upload a json file,reject incomplete duplicate data -export support selection export all file search sender